fix: Points list scroll
=> overflow: scroll for pts in pts_list (+ deleted scrollbar)

--- a/src/comp/pts_list/style.css
+++ b/src/comp/pts_list/style.css
@@ -10,7 +10,7 @@
 
 #pts-list-btn {
 	position: absolute;
-	bottom: 25px;
+	bottom: 35px;
 	left: 50%;
 	transform: translateX(-50%);
 	background-color: rgba(255, 255, 255, 0.15);
@@ -43,8 +43,15 @@
 	min-width: 275px;
 	width: 30vw;
 	max-width: 450px;
+    min-height: 300px;
+    max-height: 500px;
+    overflow: scroll;
+    scrollbar-width: none;
+  	-ms-overflow-style: none;
 	z-index: 3;
 }
+
+#pts-list-popup::-webkit-scrollbar { display: none }
 
 #pts-list-popup h3 {
 	text-align: center;
@@ -56,7 +63,6 @@
 	padding: 15px;
 	padding-left: 20px;
 	padding-right: 20px;
-	backdrop-filter: blur(10px);
 	background-color: #ffffff14;
 	display: flex;
 	align-items: center;
